; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_stackshot.c_get_stackshot_estsize.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_stackshot.c_get_stackshot_estsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@threads_count = common dso_local global i32 0, align 4
@tasks_count = common dso_local global i32 0, align 4
@TASK_UUID_AVG_SIZE = common dso_local global i32 0, align 4
@STACKSHOT_SUPP_SIZE = common dso_local global i64 0, align 8
@PAGE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_stackshot_estsize(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i32, i32* @threads_count, align 4
  %7 = sext i32 %6 to i64
  %8 = mul i64 %7, 4
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @tasks_count, align 4
  %11 = sext i32 %10 to i64
  %12 = load i32, i32* @TASK_UUID_AVG_SIZE, align 4
  %13 = sext i32 %12 to i64
  %14 = add i64 4, %13
  %15 = mul i64 %11, %14
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %17, %18
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* @STACKSHOT_SUPP_SIZE, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i32, i32* @PAGE_MASK, align 4
  %24 = call i64 @VM_MAP_ROUND_PAGE(i64 %22, i32 %23)
  store i64 %24, i64* %5, align 8
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* %2, align 8
  %27 = icmp slt i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %1
  %29 = load i64, i64* %2, align 8
  %30 = load i32, i32* @PAGE_MASK, align 4
  %31 = call i64 @VM_MAP_ROUND_PAGE(i64 %29, i32 %30)
  store i64 %31, i64* %5, align 8
  br label %32

32:                                               ; preds = %28, %1
  %33 = load i64, i64* %5, align 8
  ret i64 %33
}

declare dso_local i64 @VM_MAP_ROUND_PAGE(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
